# console-app

./: CMakeLists.txt  main.cpp
include/: common_libs.h  main.h
include/app/: ComputerRoomReservation.h  SpeechManager.h  WorkerManager.h  addressBook.h
src/: login.cpp  option.cpp  terminal.cpp
src/app/: ComputerRoomReservation.cpp  SpeechManager.cpp  WorkerManager.cpp  addressBook.cpp
